--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 <section>
     <ol>
         <li>
-            <a href="tema7.html"> IA</a>
+            <a href="tema7.html"> Inteligencia Artificial</a>
         </li>
+     
+       <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Dall-e_3_%28jan_%2724%29_artificial_intelligence_icon.png" alt="Inteligencia Artificial" class="Imagenes">
     </ol>
+ 
+  
 </section>
     <footer>
         <p>©APDE El Roble</p>
